[gd_scene load_steps=3 format=2]

[ext_resource path="res://UIMain/ContextMenu/ArchitectureAndTroopMenu.gd" type="Script" id=5]
[ext_resource path="res://UIMain/ContextMenu/ContextMenu.tscn" type="PackedScene" id=6]

[node name="ArchitectureAndTroopMenu" instance=ExtResource( 6 )]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource( 5 )

[node name="V" type="VBoxContainer" parent="." index="3"]
offset_right = 40.0
offset_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Architecture" type="Button" parent="V" index="0"]
offset_right = 167.0
offset_bottom = 38.1229
text = "ARCHITECTURE"

[node name="Troop" type="Button" parent="V" index="1"]
offset_top = 34.0
offset_right = 167.0
offset_bottom = 72.1229
text = "TROOP"
[connection signal="pressed" from="V/Architecture" to="." method="_on_Architecture_pressed"]
[connection signal="pressed" from="V/Troop" to="." method="_on_Troop_pressed"]
